--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -4,10 +4,15 @@
     xmlns:mvc="sap.ui.core.mvc">
     <List
         id="invoiceList"
-        headerText="{i18n>invoiceListTitle}"
         class="sapUiResponsiveMargin"
         width="auto"
-        items="{invoice>/Invoices}">
+        items="{
+            path: 'invoice>/Invoices',
+            sorter: {
+                path: 'ShipperName',
+                group: true
+            }
+        }">
         <headerToolbar>
             <Toolbar>
                 <Title text="{i18n>invoiceListTitle}" />
@@ -27,7 +32,9 @@
                     }
                 }"
                 numberUnit="{view>/currency}"
-                numberState="{=${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}">
+                numberState="{=${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}"
+                type="Navigation"
+                press="onPress">
                 <firstStatus>
                     <ObjectStatus text="{
                             path: 'invoice>Status',
