--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -17,6 +17,7 @@
             <content>
                 <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.HelloPanel" />
                 <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.InvoiceList" />
+                <mvc:XMLView viewName="sap.ui.demo.walkthrough.view.ComboBoxTest" />
             </content>
         </Page>
     </mvc:View>
